--- a/css/root.css
+++ b/css/root.css
@@ -14,6 +14,9 @@
     --orange-dark: #e07c22;
     --red-bld: #B12704;
     --yellow: #F7CA00;
+    --purple: #7A3CFF;
+    --purple-dark: #5626bf;
+    --blue-dark3: #31119b;
     
 
     --fs-xs: 12px;
@@ -23,7 +26,7 @@
     --fs-xl: 24px;
 
     
-    --font-primary: 'Montserrat', sans-serif;
+    --font-primary: 'Red Hat Text', sans-serif;
     --font-secondary: 'Roboto Condensed', sans-serif;
     --font-ternary: Arial, Helvetica, sans-serif;
 
