--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ ul {
 
 #logo-container{
     height: 100px;
-    width: 1098;
+    width: 1300px;
     background-color: transparent;
     border-top: 1px solid var(--white);
     border-bottom: 1px solid var(--white);
