--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;700&family=Teko:wght@400;700&display=swap');
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -21,65 +21,93 @@ ul a {
     padding: 20px;
     color: var(--white);
     padding-left: 30px;
-        
+    
 }
+
+/* ul a:hover{
+    color: var(--purple-dark);
+
+} */
+
+/* #logo-container {
+    height: 100px;
+    background-color: transparent;
+    width: 100%; 
+    
+
+} */
 
 ul {
     padding-top: 35px;
-    padding-left: 80px;
+    padding-left: 70px;
+    margin-right: 320px;
     list-style: none;
     
 }
 
-#logo-container {
-    height: 100px;
-    width: 1370px;
-    background-color: transparent;
-    border-top: 1px solid var(--white);
-    border-bottom: 1px solid var(--white);
-    
-
-}
 
 #logo {
     height: 98px;
     padding-left: 70px;
-    /* border-right: 1px solid var(--white);
-    border-left: 1px solid var(--white); */
+    opacity: 0.7;
+    padding-top: 10px;
+    
+    
     
 }
 
 #menu {
     height:100px;
-    width: 828px;
-}
-
-#contatobox {
-    height: 98px;
-    width: 200px;
-    background-color: #1E1A1B;
-    /* border-right: 1px solid var(--white); */
-    border-left: 1px solid var(--white);   
-
-}
-
-#contato {
-    height: 98px;
-    width: 100px;
-    background-color: black;
-    /* border-right: 1px solid var(--white);
-    border-left: 1px solid var(--white);    */
-
-}
-
-#contato img {
-    height: 100%;
-    width: 100%;
-}
-
-#patch {
-    height: 98px;
-    width: 297px;
     
-
 }
+
+/* #menu li {
+
+  
+  text-shadow: 0 0 15px #8e54e9;
+  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+#menu li:after,
+#menu li:before {
+  content: "";
+  position: absolute;
+  display: block;
+  border: 0px solid transparent;
+}
+
+#menu li:after {
+    width: 0%;
+    height: 80%;
+    border-top: 2px solid #fff;
+    border-bottom: 2px solid #fff;
+    transition: all 0.3s ease;
+    text-transform: uppercase;
+  }
+  
+  #menu li:before {
+    width: 120%;
+    height: 0%;
+    border-left: 2px solid #fff;
+    border-right: 2px solid #fff;
+    transition: all 0.5s ease;
+  }
+  
+  #menu li:hover::before {
+    height: 80%;
+  }
+  
+  #menu li:hover::after {
+    width: 120%;
+  } */
+
+
+
+body {
+    position:relative;  
+    background-image: url(/img/medium-shot-man-wearing-vr-glasses.jpg);
+    background-size: cover;
+}
+
+
+
