--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,20 @@ a {
 }
 
 
-ul a {
+ ul a {
     text-decoration: none;
-    padding: 20px;
     color: var(--white);
-    padding-left: 30px;
-    
+       
 }
 
-/* ul a:hover{
+ /* ul a:hover{
     color: var(--purple-dark);
+    border: var(--purple-dark);
+    border-width: 1px;
+    border-style: solid;
+    text-transform: uppercase;
 
-} */
+}  */
 
 /* #logo-container {
     height: 100px;
@@ -37,69 +39,106 @@ ul a {
 
 } */
 
-ul {
+/* ul {
     padding-top: 35px;
     padding-left: 70px;
     margin-right: 320px;
     list-style: none;
     
-}
+} */
 
 
 #logo {
     height: 98px;
+    width: auto;
     padding-left: 70px;
     opacity: 0.7;
-    padding-top: 10px;
+    padding-top: 15px;
     
     
     
 }
 
-#menu {
-    height:100px;
+/* .container {
+    overflow: hidden;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction:row;
+    justify-content: center;
+  } */
+
+/* .navbar {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+} */
+
+/* .header {
+    width: 100%;
+    height: 60px;
+  } */
+
+.menu {
+    height: 100%;
+    width: 100%;
+    justify-content: center;
+    list-style: none;
+    padding: 35px 60px;
+    color: var(--white);
+  }
+
+.menu li {
+    display: block;
+    height: 100%;
+    font-family: var(--font-primary);
+    position: relative;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    text-align: center;
+    padding: 0px 10px;
+    margin-right: 40px;
     
-}
+  }
 
-/* #menu li {
-
+  .menu li:after,
+  .menu li:before {
+    content: "";
+    position: absolute;
+    display: block;
+    border: 0px solid transparent;
+  }
   
-  text-shadow: 0 0 15px #8e54e9;
-  transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
-}
-
-#menu li:after,
-#menu li:before {
-  content: "";
-  position: absolute;
-  display: block;
-  border: 0px solid transparent;
-}
-
-#menu li:after {
+  .menu li:after {
     width: 0%;
     height: 80%;
     border-top: 2px solid #fff;
     border-bottom: 2px solid #fff;
     transition: all 0.3s ease;
-    text-transform: uppercase;
   }
   
-  #menu li:before {
+  .menu li:before {
     width: 120%;
     height: 0%;
     border-left: 2px solid #fff;
     border-right: 2px solid #fff;
     transition: all 0.5s ease;
   }
-  
-  #menu li:hover::before {
-    height: 80%;
+  .menu li:hover {
+    text-transform: uppercase;
   }
   
-  #menu li:hover::after {
+  .menu li:hover::before {
+    height: 80%;
+    
+  }
+  
+  .menu li:hover::after {
     width: 120%;
-  } */
+  }
 
 
 
