--- a/css/style.css
+++ b/css/style.css
@@ -22,10 +22,10 @@ ul a {
 }
 
 #logo {
-    height: 98px;
+    height: 110px;
     width: auto;
     padding-left: 70px;
-    opacity: 0.7;
+    /* opacity: 1; */
     padding-top: 20px;
     
     
