--- a/css/root.css
+++ b/css/root.css
@@ -30,4 +30,6 @@
     --font-secondary: 'Roboto Condensed', sans-serif;
     --font-ternary: Arial, Helvetica, sans-serif;
 
+    /* font-family: 'Kanit', sans-serif; */
+
 }
