--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;700&family=Teko:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;500;600;700;800&display=swap');
 
 *{
     margin: 0;
@@ -20,10 +21,10 @@ ul a {
 }
 
 body {
-    /* background: linear-gradient(125deg, rgba(45,6,62,1) 0%, rgba(101,38,96,1) 40%, rgba(69,11,53,1) 100%);
-    background-repeat: no-repeat;
-    background-size: cover; */
-    background-color: #060606;
+    /* background: linear-gradient(125deg, rgba(45,6,62,1) 0%, rgba(101,38,96,1) 40%, rgba(69,11,53,1) 100%);*/
+    background-image: url(../img/206807f8bf5f8b96cb1ffc6e97708c71.jpg);
+    /* background-repeat: no-repeat; */
+    background-size: cover; 
 }
 
 /* .div-container {
@@ -34,10 +35,15 @@ body {
 } */
 
 
-/* header{
-    border-bottom: 0.5px solid #fff;
+header{
+    border-bottom: 0.5px solid var(--purple-dark);
+    border-top: 0.5px solid var(--purple-dark);
+    background: linear-gradient(rgba(0,0,0,.8), rgba(0,0,0,.5));
+    margin-top: 5px;
+    /* border-left: 0.5px solid #fff;
+    border-right: 0.5px solid #fff; */
 
-} */
+}
 
 #logo {
     /* max-height: 150px;
@@ -58,7 +64,7 @@ body {
 }
 
 .menu li {
-    display: block;
+    /* display: block; */
     height: 100%;
     font-family: var(--font-primary);
     font-size: 15px;
@@ -66,14 +72,14 @@ body {
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1);
+    /* transition: all 300ms cubic-bezier(0.075, 0.82, 0.165, 1); */
     text-align: center;
-    padding: 0px 10px;
-    margin-right: 40px;
+    padding: 0px 20px;
+    /* margin-right: 40px; */
     
 }
 
-.menu li:after,
+/* .menu li:after,
 .menu li:before {
     content: "";
     position: absolute;
@@ -97,20 +103,20 @@ body {
     border-right: 2px solid #5626bf;
     transition: all 0.5s ease;
     
-}
-.menu li:hover {
-    text-transform: uppercase;
+} */
+ul a:hover {
+    color: #5F3C84;
     
 }
   
-.menu li:hover::before {
+/*.menu li:hover::before {
     height: 80%;
     
 }
   
 .menu li:hover::after {
     width: 120%;
-}
+} */
 
 .imagem-conteudo-p {
     max-width: 500px;
@@ -123,12 +129,39 @@ body {
     z-index: 4;
     width: 100px;
     height: 25px;
+    margin-bottom: 18px;
 }
 
 #footer-div a {
     color: var(--white);
     font-size: 15px;
     text-shadow: 2px 2px 1px black;
+}
+
+
+@media(max-width: 1366px) {
+
+    .div-container {
+        padding-right: 5px;
+    }
+
+    header{
+        margin-bottom: 30px;
+    }
+
+    .slide p {
+        padding-bottom: 80px;    
+    }
+
+    main {
+        margin-bottom: 15px;
+    }
+
+    #primeira-imagem {
+       
+        padding-top: 130px;
+    }
+
 }
 
 
