--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Red+Hat+Text:wght@300;400;700&family=Teko:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     margin: 0;
@@ -9,12 +8,15 @@
 
 a {
     text-decoration: none;
-    color: #000;
-    font-size: 1.3rem;
+    color: #92429F;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 1rem;
+    transition: color .3s;
 }
 
 a:hover {
-    color: #673085;
+    color: #b869c4;
 }
 
 body {
@@ -24,24 +26,35 @@ body {
 
 header {
     display: flex;
-    /* justify-content: space-between;     */
+    justify-content: space-around;    
     align-items: center;
-    border: 1px, solid;
-    border-color: #673085;
+    border-bottom: 1px solid;
+    border-color: #8E5098;
 }
 
 header img {
-    width: 20%;
-    padding-left: 2rem;
-    /* padding-top: 1rem; */
-}
-
-nav {
-    margin: 0 auto;    
+    width: 20%;    
 }
 
 header nav ul{
     display: flex;
     list-style: none;
-    gap: 2rem;
+    gap: 2rem;    
+}
+
+button {
+    border-radius: 50px;
+    border: none;
+    background-color: #1EA044;
+    color: #ffff;
+    padding: .7rem;
+    font-weight: bold;
+}
+
+button:hover {
+    cursor: pointer;
+}
+
+section {
+    padding-top: 1rem;
 }
