--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,7 @@ header img {
     width: 20%;    
 }
 
-header nav ul{
+header nav ul {
     display: flex;
     list-style: none;
     gap: 2rem;    
@@ -55,6 +55,56 @@ button:hover {
     cursor: pointer;
 }
 
-section {
+h1 {
+    color: transparent;
+}
+
+/* section {
     padding-top: 1rem;
+} */
+
+#camera-container {
+    display: flex;
+    flex-direction: column;
+    background-color: #92429F;    
+}
+
+#camera-container div:first-child img {
+    width: 100%;
+    transform: scaleX(-1);
+}
+
+#camera-conteudo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 2rem;
+    color: #ffff;
+}
+
+#camera-conteudo h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+    display: inline;
+    padding-right: 5rem;
+    padding-bottom: 3rem;
+}
+
+#camera-texto {
+    display: flex;
+    color: #ffff;
+    gap: 1rem;
+    padding-right: 1rem;
+}
+
+#camera-texto div:first-child {
+    display: flex;
+    flex-direction: column;
+}
+
+#camera-texto div:last-child {
+    border: none;
+    border-radius: 50px;
+    overflow: hidden;    
 }
