--- a/css/style.css
+++ b/css/style.css
@@ -56,25 +56,33 @@ button:hover {
 }
 
 h1 {
-    color: transparent;
+    color: #92429F;
+    font-family: "Montserrat", sans-serif;
+    text-align: center;
+    font-size: 1.5rem;
+    padding-top: 5rem;
 }
 
-/* section {
+section {
     padding-top: 1rem;
-} */
+}
 
-#camera-container {
+.section-container {
     display: flex;
     flex-direction: column;
     background-color: #92429F;    
 }
 
-#camera-container div:first-child img {
+.direita {
     width: 100%;
     transform: scaleX(-1);
 }
 
-#camera-conteudo {
+.esquerda {
+    width: 100%;    
+}
+
+.section-conteudo {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -82,7 +90,12 @@ h1 {
     color: #ffff;
 }
 
-#camera-conteudo h2 {
+.section-conteudo-esquerda {
+    align-items: flex-start;
+    color: #ffff;
+}
+
+.section-conteudo h2 {
     font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 2rem;
@@ -91,20 +104,92 @@ h1 {
     padding-bottom: 3rem;
 }
 
-#camera-texto {
+.section-conteudo-esquerda h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+    display: inline;
+    padding-left: 5rem;
+    padding-bottom: 3rem;
+}
+
+.section-texto {
     display: flex;
+    flex-direction: row-reverse;
     color: #ffff;
     gap: 1rem;
     padding-right: 1rem;
 }
 
-#camera-texto div:first-child {
+.section-texto div:first-child {
     display: flex;
     flex-direction: column;
 }
 
-#camera-texto div:last-child {
+.section-texto div:last-child {
     border: none;
     border-radius: 50px;
     overflow: hidden;    
+}
+
+.section-texto-esquerda {
+    display: flex;
+    color: #ffff;
+    gap: 1rem;
+    padding-left: 1rem;
+}
+
+.section-texto-esquerda div:first-child {
+    display: flex;
+    flex-direction: column;
+    order: 2;
+}
+
+.section-texto-esquerda div:last-child {
+    border: none;
+    border-radius: 50px;
+    overflow: hidden;
+    order: 1;
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 1.5rem;
+    font-family: "Montserrat", sans-serif;
+    color:#92429F;
+    padding-top: 2rem;
+}
+
+footer div nav ul {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+    gap: 1rem;
+}
+
+#social-link {
+    /* display: flex;     */
+    column-gap: 1rem;    
+}
+
+#social-link a img {
+    width: 6%;
+}
+
+#copyright p {
+    padding-bottom: 1.5rem;
+    font-size: .8rem;
 }
