--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,15 @@ footer div {
     text-align: center;
     gap: 1.5rem;
     font-family: "Montserrat", sans-serif;
-    color:#92429F;
-    padding-top: 2rem;
+    color:#92429F;    
+}
+
+footer div:first-child {    
+    padding-top: 4rem;
+}
+
+footer div:last-child {
+    padding-bottom: 2rem;
 }
 
 footer div nav ul {
@@ -182,7 +189,7 @@ footer div nav ul {
 
 #social-link {
     /* display: flex;     */
-    column-gap: 1rem;    
+    gap: 1rem;    
 }
 
 #social-link a img {
@@ -190,6 +197,6 @@ footer div nav ul {
 }
 
 #copyright p {
-    padding-bottom: 1.5rem;
+    /* padding-bottom: 1.5rem; */
     font-size: .8rem;
 }
