--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    gap: 2rem;
+    /* gap: 2rem; */
     color: #ffff;
 }
 
@@ -115,10 +115,10 @@ section {
 
 .section-texto {
     display: flex;
-    flex-direction: row-reverse;
+    /* flex-direction: row-reverse; */
     color: #ffff;
-    gap: 1rem;
-    padding-right: 1rem;
+    /* gap: 1rem; */
+    /* padding-right: 1rem; */
 }
 
 .section-texto div:first-child {
@@ -150,6 +150,44 @@ section {
     border-radius: 50px;
     overflow: hidden;
     order: 1;
+}
+
+#web-conteudo h2 {
+    padding-right: 6rem;
+}
+
+#web-texto {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+    padding-left: 2rem;
+    padding-top: 6rem;
+    font-family: "Montserrat", sans-serif;
+    font-size: 1.4rem;
+}
+
+#web-texto div:last-child {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#portfolio {
+    padding: 1rem 2rem;
+    background-color: #673085;
+    transition: color .5s;
+    font-size: 1rem;
+    transition: color .3s;
+}
+
+#portfolio:hover {
+    background-color: #b869c4;
+}
+
+#web-foto {
+    width: 100%;
+    height: auto;
+    padding-bottom: 2rem;
 }
 
 footer {
