--- a/css/style.css
+++ b/css/style.css
@@ -91,8 +91,17 @@ h1 {
 .section-conteudo {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;    
+    align-items: flex-end;
     color: #ffff;
+}
+
+.section-conteudo h2 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 800;
+    font-size: 2rem;
+    display: inline;
+    padding-right: 10rem;
+    padding-bottom: 3rem;
 }
 
 .section-conteudo-esquerda {
@@ -102,77 +111,55 @@ h1 {
     color: #ffff;
 }
 
-.section-conteudo h2 {
-    font-family: "Montserrat", sans-serif;
-    font-weight: 800;
-    font-size: 2rem;
-    display: inline;
-    padding-right: 5rem;
-    padding-bottom: 3rem;
-}
-
 .section-conteudo-esquerda h2 {
     font-family: "Montserrat", sans-serif;
     font-weight: 800;
     font-size: 2rem;
     display: inline;
-    padding-left: 5rem;
+    padding-left: 10rem;
     padding-bottom: 3rem;
 }
 
 .section-texto {
-    display: flex;
-    /* flex-direction: row-reverse; */
-    color: #ffff;
-    /* gap: 1rem; */
-    /* padding-right: 1rem; */
-}
-
-.section-texto div:first-child {
-    display: flex;
-    flex-direction: column;
-}
-
-.section-texto div:last-child {
-    border: none;
-    border-radius: 50px;
-    overflow: hidden;    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 1rem;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 
 .section-texto-esquerda {
-    display: flex;
-    color: #ffff;
-    gap: 1rem;
-    padding-left: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;    
+    padding: 0 1rem;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.3rem;
+    font-weight: 400;
 }
 
-.section-texto-esquerda div:first-child {
-    display: flex;
-    flex-direction: column;
+.section-texto-esquerda div:first-child {    
     order: 2;
+    padding-top: 6rem;
 }
 
 .section-texto-esquerda div:last-child {
     order: 1;
 }
 
-#web-conteudo h2 {
-    padding-right: 11rem;
-}
-
-#web-texto-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+.section-foto {
+    width: 41.15rem;
+    height: 30.80rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #web-texto {
     display: flex;
     flex-direction: column;    
-    gap: 4rem;
-    padding-left: 2rem;
-    padding-top: 6rem;
-    font-family: "Roboto", sans-serif;
-    font-size: 1.4rem;
+    gap: 4rem;    
+    padding-top: 6rem;    
 }
 
 #web-texto div:last-child {
@@ -199,27 +186,22 @@ h1 {
     padding-bottom: 2rem;
 }
 
-#camera-texto-container {
-    padding-top: 5rem;
-    display: grid;
-    grid-template-columns: 1fr 1fr;    
-}
-
-#camera-texto {
-    font-family: "Roboto", sans-serif;
-    font-size: 1.4rem;
+#camera-texto {    
     padding-right: 1rem;
 }
 
-#camera-imagem-container {    
-    padding-left: 6rem;    
-    padding-bottom: 2rem;    
-    
+#camera-foto {
+    width: 50%;
+    padding-bottom: 2rem;        
 }
 
-#camera-imagem {
-    width: 60%;
-    height: auto;    
+#redes-texto {
+    padding-top: 6rem;
+}
+
+#redes-foto {
+    width: 70%;
+    padding-bottom: 2rem;
 }
 
 footer {
