--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,17 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
     color: #92429F;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 1rem;
-    transition: color .3s;
+    transition: .5s ease;
 }
 
 a:hover {
@@ -20,7 +24,7 @@ a:hover {
 }
 
 body {
-    max-width: 100vw;
+    min-width: 100vw;
     background-color: #ffff;
 }
 
@@ -42,6 +46,44 @@ header nav ul {
     gap: 2rem;    
 }
 
+.nav__menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: var(--body-color);
+    width: 100%;
+    box-shadow: 0 8px 20px hsla(19, 64%, 24%, .1);
+    padding-block: 3.5rem;
+    transition: top .4s;
+}
+
+.nav__list {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    row-gap: 2rem;
+}
+
+.nav__link {
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    transition: color .4s;
+}
+
+.nav__close {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.nav__toggle {
+    display: none;
+}
+
+
+
 button {
     border-radius: 50px;
     border: none;
@@ -49,7 +91,7 @@ button {
     color: #ffff;
     padding: .7rem;
     font-weight: bold;
-    transition: color .3s;
+    transition: .5s ease;
 }
 
 button:hover {
@@ -65,24 +107,28 @@ h1 {
     padding-top: 5rem;
 }
 
-/* section {
-    padding-top: 1rem;
-} */
+section {
+    min-width: 100vw;
+    max-width: 100vw;
+}
 
 #home {
     padding-top: 1.65rem;
+    padding-bottom: 3rem;
 }
 
 .section-container {
     display: flex;
     flex-direction: column;
-    background-color:#673085;    
+    background-color:#673085;
+    min-width: 100vw;    
 }
 
 .section-container-esquerda {
     display: flex;
     flex-direction: column;
     background-color: #92429F;
+    min-width: 100vw;
 }
 
 .direita {
@@ -129,7 +175,7 @@ h1 {
 .section-texto {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 1rem;
+    padding: 0 4rem;
     font-family: "Roboto", sans-serif;
     font-size: 1.3rem;
     font-weight: 400;
@@ -138,7 +184,7 @@ h1 {
 .section-texto-esquerda {
     display: grid;
     grid-template-columns: 1fr 1fr;    
-    padding: 0 1rem;
+    padding: 0 4rem;
     font-family: "Roboto", sans-serif;
     font-size: 1.3rem;
     font-weight: 400;
@@ -176,10 +222,10 @@ h1 {
 
 #portfolio {
     padding: 1rem 2rem;
-    background-color: #673085;
-    transition: color .5s;
+    background-color: #92429F;
+    transition: .5s ease;
     font-size: 1rem;
-    transition: color .3s;
+    
 }
 
 #portfolio:hover {
@@ -193,8 +239,7 @@ h1 {
 }
 
 #camera-texto {
-    padding-top: 7rem;    
-    padding-right: 1rem;
+    padding-top: 7rem;  
 }
 
 #camera-foto {
@@ -256,15 +301,162 @@ footer div nav ul {
 }
 
 #social-link {
-    /* display: flex;     */
-    gap: 1rem;    
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+    gap: 2rem;     
+}
+
+#social-link a {
+    display: inline-block;
+    width: 6%;    
+    height: auto;    
+    padding: 0;    
+    margin: 0;       
 }
 
 #social-link a img {
-    width: 6%;
+    width: 100%;    
+    display: block;
+    height: auto;        
 }
 
-#copyright p {
-    /* padding-bottom: 1.5rem; */
+#social-link a:hover img {
+    filter: brightness(0) saturate(100%) invert(71%) sepia(65%) saturate(3360%) hue-rotate(230deg) brightness(80%) contrast(89%);
+}
+
+#copyright p {    
     font-size: .8rem;
+}
+
+::-webkit-scrollbar {
+    width: 0.6rem;
+    border-radius: .5rem;
+    background-color: hsl(207, 4%, 75%);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(207, 4%, 65%);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(207, 4%, 55%);
+}
+
+
+@media screen and (max-width: 950px) {
+    #menu {
+        display: none;
+    }
+
+    .nav__toggle {
+        display: flex;
+        cursor: pointer;
+    }
+    
+    .nav__toggle i {
+        font-size: 2rem;
+    }
+
+    .show-menu {
+        top: 0;
+    }
+
+    #zap {
+        display: none;
+    }
+
+    header img {
+        width: 40%;
+    }
+
+    #home {
+        padding-top: 4rem;
+        padding-bottom: 5rem;
+    }
+
+    .section-conteudo, .section-conteudo-esquerda {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        width: 100%;        
+    }
+
+    .section-conteudo h2, .section-conteudo-esquerda h2 {
+        padding: 0;
+        text-align: center;
+    }
+
+    .section-texto, .section-texto-esquerda {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: .97rem;
+        padding: 0;
+        width: 100%;        
+    }    
+
+    .section-texto div:last-child, .section-texto-esquerda div:last-child {
+        height: auto;
+        order: 1;
+    }    
+
+    #web-texto, .section-texto-esquerda div:first-child, #redes-texto {
+        width: 100%;
+        /* max-width: 100%; */
+        order: 2;
+        padding: 0 1rem 5rem 1rem;
+    }    
+
+    #web-texto div {
+        min-width: 100%;
+        display: flex;
+    }
+
+    #web-texto p {
+        word-wrap: break-word;        
+        overflow-wrap: break-word;               
+    }
+
+    #web-foto {
+        width: 50%;
+        padding: 0;
+    }
+
+    #camera-texto {
+        padding: 5rem 1rem 5rem 1rem;
+    }
+
+    #camera-foto {
+        width: 30%;
+        padding: 3rem 0 0 0;
+    }
+
+    #redes-imagem-container {
+        padding: .7rem 0 0 0;        
+        justify-content: center;
+    }
+
+    #redes-texto {
+        padding-top: 2rem;
+    }
+
+    #redes-foto {
+        width: 50%;
+        padding: 0;
+    }
+
+    #suporte-texto {
+        padding-top: 2.5rem;
+    }
+
+    #suporte-foto {
+        width: 50%;
+        padding: .5rem 0 0 0;
+    }
+
 }
