--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 a {
     text-decoration: none;
     color: #92429F;
@@ -21,13 +25,14 @@ a:hover {
 
 body {
     max-width: 100vw;
-    background-color: #ffff;
+    background-color: #ffff;    
 }
 
 header {
     display: flex;
     justify-content: space-around;    
     align-items: center;
+    position: relative;
     border-bottom: 1px solid;
     border-color: #8E5098;
 }
@@ -42,6 +47,47 @@ header nav ul {
     gap: 2rem;    
 }
 
+.nav__menu {
+    position: fixed;
+    top: -100%;
+    left: 0;
+    background-color: #ffff;
+    width: 100%;
+    max-width: 100vw;
+    height: auto;
+    box-shadow: 0 8px 20px hsla(19, 64%, 24%, .1);
+    padding-block: 3.5rem;
+    transition: top .4s;
+    border: 1px #0000;
+    border-radius: 20px;
+    z-index: 10;
+}
+
+.nav__list {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    row-gap: 2rem;
+}
+
+.nav__link {
+    color: #673085;
+    font-weight: 400;
+    transition: .4s;
+}
+
+.nav__close {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.nav__toggle {
+    display: none;
+}
+
 button {
     border-radius: 50px;
     border: none;
@@ -49,7 +95,7 @@ button {
     color: #ffff;
     padding: .7rem;
     font-weight: bold;
-    transition: color .3s;
+    transition: .5s ease;
 }
 
 button:hover {
@@ -71,18 +117,23 @@ h1 {
 
 #home {
     padding-top: 1.65rem;
+    padding-bottom: 3rem;
 }
 
 .section-container {
     display: flex;
     flex-direction: column;
-    background-color:#673085;    
+    background-color:#673085;
+    /* min-width: 100vw; */
+    max-width: 100vw;
 }
 
 .section-container-esquerda {
     display: flex;
     flex-direction: column;
     background-color: #92429F;
+    /* min-width: 100vw; */
+    max-width: 100vw;
 }
 
 .direita {
@@ -129,7 +180,7 @@ h1 {
 .section-texto {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding: 0 1rem;
+    padding: 0 4rem;
     font-family: "Roboto", sans-serif;
     font-size: 1.3rem;
     font-weight: 400;
@@ -138,7 +189,7 @@ h1 {
 .section-texto-esquerda {
     display: grid;
     grid-template-columns: 1fr 1fr;    
-    padding: 0 1rem;
+    padding: 0 4rem;
     font-family: "Roboto", sans-serif;
     font-size: 1.3rem;
     font-weight: 400;
@@ -154,8 +205,9 @@ h1 {
 }
 
 .section-foto {
-    width: 41.15rem;
-    height: 30.80rem;
+    width: 100%;
+    /* width: 41.15rem;*/
+    height: 30.80rem; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,10 +228,9 @@ h1 {
 
 #portfolio {
     padding: 1rem 2rem;
-    background-color: #673085;
-    transition: color .5s;
-    font-size: 1rem;
-    transition: color .3s;
+    background-color: #92429F;
+    transition: .5s ease;
+    font-size: 1rem;    
 }
 
 #portfolio:hover {
@@ -194,7 +245,6 @@ h1 {
 
 #camera-texto {
     padding-top: 7rem;    
-    padding-right: 1rem;
 }
 
 #camera-foto {
@@ -256,15 +306,222 @@ footer div nav ul {
 }
 
 #social-link {
-    /* display: flex;     */
-    gap: 1rem;    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    
+}
+
+#social-link a {
+    display: inline-block;
+    width: 6%;
+    height: auto;
+    padding: 0;
+    margin: 0;
+    transition: .5s ease;
 }
 
 #social-link a img {
-    width: 6%;
+    width: 100%;
+    display: block;
+    height: auto;    
 }
 
-#copyright p {
-    /* padding-bottom: 1.5rem; */
+#social-link a:hover img {
+    filter: brightness(0) saturate(100%) invert(71%) sepia(65%) saturate(3360%) hue-rotate(230deg) brightness(80%) contrast(89%);
+}
+
+#copyright p {    
     font-size: .8rem;
+}
+
+::-webkit-scrollbar {
+    width: 0.6rem;
+    border-radius: .5rem;
+    background-color: hsl(207, 4%, 75%);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: hsl(207, 4%, 65%);
+    border-radius: .5rem;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsl(207, 4%, 55%);
+}
+
+/*=============== SCROLL UP ===============*/
+.scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: -50%;
+    background-color: var(--container-color);
+    box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
+    display: inline-flex;
+    padding: .35rem;
+    border-radius: .25rem;
+    font-size: 1.1rem;
+    color: var(--first-color);
+    z-index: 10;
+    transition: bottom .3s, transform .3s, background .4s;
+
+}
+
+.scrollup:hover {
+    transform: translate(-.25rem);
+}
+
+/* Show Scroll Up*/
+
+.show-scroll {
+    bottom: 3rem;
+}
+
+@media screen and (max-width: 950px) {
+
+    body {
+            overflow-x: hidden;            
+        }
+
+    #menu {
+        display: none;
+    }
+
+        .nav__menu {
+            width: 100%;            
+            max-width: 100%;
+        }
+
+    .nav__toggle {
+        display: block;
+        cursor: pointer;
+        padding-right: 1rem;
+    }
+
+    .nav__toggle i {
+        font-size: 2rem;
+        color: #673085;
+    }
+
+    .show-menu {
+        top: 0;
+    }
+
+    #zap {
+        display: none;
+    }
+
+    header img {
+        width: 40%;
+        padding-left: 1rem;
+    }
+
+    #home {
+        padding-top: 4rem;
+        padding-bottom: 5rem;        
+    }
+
+    .section-container,
+    .section-container-esquerda {
+        max-width: 100%;        
+    }
+
+    .section-conteudo,
+    .section-conteudo-esquerda {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 0;
+        width: 100%;
+    }
+
+    .section-conteudo h2,
+    .section-conteudo-esquerda h2 {
+        padding: 0;
+        text-align: center;
+    }
+
+    .section-texto,
+    .section-texto-esquerda {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: .97rem;
+        padding: 0;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    .section-texto div:last-child,
+    .section-texto-esquerda div:last-child {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+        order: 1;
+    }
+
+        #camera-foto,
+        #redes-foto,
+        #suporte-foto {
+            max-width: 100%;            
+        }
+
+    #web-texto,
+    .section-texto-esquerda div:first-child,
+    #redes-texto {
+        width: 100%;
+        order: 2;
+        padding: 0 1rem 5rem 1rem;
+    }
+
+    #web-texto div {
+        min-width: 100%;
+        display: flex;
+    }
+
+    #web-texto p {
+        word-wrap: break-word;
+        overflow-wrap: break-word;
+    }
+
+    #web-foto {
+        width: 50%;
+        padding: 0;
+    }
+
+    #camera-texto {
+        padding: 5rem 1rem 5rem 1rem;
+    }
+
+    #camera-foto {
+        width: 30%;
+        padding: 3rem 0 0 0;
+    }
+
+    #redes-imagem-container {
+        padding: .7rem 0 0 0;
+        justify-content: center;
+    }
+
+    #redes-texto {
+        padding-top: 2rem;
+    }
+
+    #redes-foto {
+        width: 50%;
+        padding: 0;
+    }
+
+    #suporte-texto {
+        padding-top: 2.5rem;
+    }
+
+    #suporte-foto {
+        width: 50%;
+        padding: .5rem 0 0 0;
+    }
+
 }
