--- a/css/style.css
+++ b/css/style.css
@@ -113,28 +113,25 @@ h1 {
 }
 
 /* section {
-    padding-top: 1rem;
+    padding-bottom: 5rem;
 } */
 
 #home {
     padding-top: 1.65rem;
-    padding-bottom: 3rem;
-    padding-bottom: 3rem;
+    padding-bottom: 10rem;    
 }
 
 .section-container {
     display: flex;
     flex-direction: column;
-    background-color:#673085;
-    /* min-width: 100vw; */
+    background-color:#673085;    
     max-width: 100vw;
 }
 
 .section-container-esquerda {
     display: flex;
     flex-direction: column;
-    background-color: #92429F;
-    /* min-width: 100vw; */
+    background-color: #92429F;    
     max-width: 100vw;
 }
 
@@ -209,8 +206,7 @@ h1 {
 }
 
 .section-foto {
-    width: 100%;
-    /* width: 41.15rem;*/
+    width: 100%;    
     height: 30.80rem; 
     display: flex;
     justify-content: center;
@@ -248,12 +244,12 @@ h1 {
 }
 
 #camera-texto {
-    padding-top: 7rem;    
+    padding-top: 6rem;    
 }
 
 #camera-foto {
     width: 50%;
-    padding-bottom: 7rem;        
+    padding-bottom: 2rem;
 }
 
 #redes-texto {
@@ -272,6 +268,10 @@ h1 {
 #suporte-foto {
     width: 70%;
     padding-bottom: 2rem;
+}
+
+#micro {
+    padding-bottom: 0;
 }
 
 footer {
@@ -360,13 +360,13 @@ footer div nav ul {
     position: fixed;
     right: 1rem;
     bottom: -50%;
-    background-color: var(--container-color);
+    background-color: #ffff;
     box-shadow: 0 4px 12px hsla(19, 64%, 24%, .1);
     display: inline-flex;
     padding: .35rem;
     border-radius: .25rem;
     font-size: 1.1rem;
-    color: var(--first-color);
+    color: #673085;
     z-index: 10;
     transition: bottom .3s, transform .3s, background .4s;
 
@@ -437,13 +437,14 @@ footer div nav ul {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 0;
+        padding: 4rem 0;
         width: 100%;
     }
 
     .section-conteudo h2,
     .section-conteudo-esquerda h2 {
         padding: 0;
+        font-size: 2rem;
         text-align: center;
     }
 
@@ -454,7 +455,7 @@ footer div nav ul {
         justify-content: center;
         align-items: center;
         font-size: .97rem;
-        padding: 0;
+        padding: 2rem 0;
         width: 100%;
         max-width: 100%;
     }
